--- a/src/Weather.css
+++ b/src/Weather.css
@@ -26,7 +26,7 @@
     font-size: smaller;
     font-weight: 50;
     margin-top: 10px;
-    text-align: left;
+    text-align: right;
   }
   small {
     font-size: xx-small;
