--- a/src/Weather.css
+++ b/src/Weather.css
@@ -16,6 +16,10 @@
     text-align: left;
   }
   
+  h2 {
+    color: #666;
+  }
+
   .details {
     list-style-type: none;
     margin-left: -30px;
@@ -42,10 +46,7 @@
     padding-top: 20px;
   }
   .icon {
-    margin-top: 8px;
-    margin-right: 0px;
-    height: 64px;
-    width: 64px;
+    margin-right: 20px;
   }
   .celsiusFarh {
     position: relative;
@@ -62,4 +63,5 @@
   }
   .numberTemp {
     font-size: 50px;
+    padding-left:10px;
   }
